Change to 2 scans

--- a/index.html
+++ b/index.html
@@ -13,16 +13,32 @@ function scancode() {
 
    scanner.scan(
       function (result) {
-      	msgText = result.text;
-      	msgFormat = result.format;
-      	msgCancel = result.cancelled;
-			document.getElementById("msg").innerHTML = "MSG : " + msgText;
-			document.getElementById("format").innerHTML = "Format : " + msgFormat
+     var 	msgText1 = result.text;
+     var 	msgFormat1 = result.format;
+     var 	msgCancel1 = result.cancelled;
+//			document.getElementById("msg").innerHTML = "MSG : " + msgText;
+//			document.getElementById("format").innerHTML = "Format : " + msgFormat
       }, 
       function (error) {
           alert("Scanning failed: " + error);
       }
    );
+alert("SCAN REPLACEMENT");
+   scanner.scan(
+      function (result) {
+     var 	msgText2 = result.text;
+     var 	msgFormat2 = result.format;
+     var 	msgCancel2 = result.cancelled;
+//			document.getElementById("msg").innerHTML = "MSG : " + msgText;
+//			document.getElementById("format").innerHTML = "Format : " + msgFormat
+      }, 
+      function (error) {
+          alert("Scanning failed: " + error);
+      }
+   );
+msgg = "OLD PERMIT : "+msgText1+" is replaced by NEW PERMIT : "+msgText2;
+alert(msgg);
+
 	}
 
 </script>
