--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ function scancode() {
 //			document.getElementById("format").innerHTML = "Format : " + msgFormat
       }, 
       function (error) {
-          alert("Scanning failed: " + error);
+          alert("Scanning failed1: " + error);
       }
    );
 alert("SCAN REPLACEMENT");
@@ -33,7 +33,7 @@ alert("SCAN REPLACEMENT");
 //			document.getElementById("format").innerHTML = "Format : " + msgFormat
       }, 
       function (error) {
-          alert("Scanning failed: " + error);
+          alert("Scanning failed2: " + error);
       }
    );
 msgg = "OLD PERMIT : "+msgText1+" is replaced by NEW PERMIT : "+msgText2;
