revised code for test

--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@ alert("SCAN REPLACEMENT");
           alert("Scanning failed2: " + error);
       }
    );
-msgg = "OLD PERMIT : "+msgText1+" is replaced by NEW PERMIT : "+msgText2;
-alert(msgg);
-
+//msgg = "OLD PERMIT : "+msgText1+" is replaced by NEW PERMIT : "+msgText2;
+//alert(msgg);
+alert(msgText1);
+alert(msgText2);
 	}
 
 </script>
