revised code for testing

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ function scancode() {
           alert("Scanning failed1: " + error);
       }
    );
+alert(msgText1);
 alert("SCAN REPLACEMENT");
    scanner.scan(
       function (result) {
