correct id typo error

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ alert("SCAN REPLACEMENT");
      var msgText2 = result.text;
      var msgFormat2 = result.format;
      var msgCancel2 = result.cancelled;
-     document.getElementById("msg").innerHTML = "MSG2 : " + msgText2;
+     document.getElementById("msg2").innerHTML = "MSG2 : " + msgText2;
 //			document.getElementById("format").innerHTML = "Format : " + msgFormat
       }, 
       function (error) {
